--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/node": "^17.0.21",
-    "vue": "^3.2.25"
+    "axios": "^0.26.1",
+    "nprogress": "^0.2.0",
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/types": "^7.17.0",
+    "@types/node": "^17.0.21",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "dart-sass": "^1.25.0",
     "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.4",
@@ -28,8 +34,10 @@
     "prettier": "^2.6.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.29.8"
   },
   "lint-staged": {
