--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build:dev": "vue-tsc --noEmit && vite build --mode development",
+    "build:pro": "vue-tsc --noEmit && vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
     "prettier": "prettier --write .",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@vitejs/plugin-legacy": "^1.7.1",
+    "@vueuse/core": "^8.1.2",
     "axios": "^0.26.1",
+    "naive-ui": "^2.26.4",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.0-rc.10",
+    "vfonts": "^0.0.3",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
@@ -36,7 +42,9 @@
     "sass-loader": "^12.6.0",
     "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.18.3",
     "vite": "^2.8.0",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.29.8"
   },
