--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-legacy": "^1.7.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.8",
     "@vueuse/core": "^8.1.2",
     "axios": "^0.26.1",
     "naive-ui": "^2.26.4",
